# diagrams-gi-gtk

./: .ghcid  .gitignore  LICENSE  README.markdown  diagrams-gi-gtk.cabal  stack.yaml
examples/: diagrams-gi-gtk-example1.hs
src/Diagrams/Backend/: GIGtk.hs  Gtk.hs
