name:                diagrams-gi-gtk
version:             0.1
synopsis:            Backend for rendering diagrams directly to GTK windows based on gi-gtk package
description:         An optional add-on to the diagrams-cairo package
                     which allows rendering diagrams directly to GTK windows.
homepage:            http://projects.haskell.org/diagrams/
license:             BSD3
license-file:        LICENSE
author:              Torsten Kemps-Benedix
maintainer:          tkx68@icloud.com
copyright:           Torsten Kemps-Benedix
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.4.4
extra-source-files:  README.markdown

source-repository head
  type:     git
  location: http://github.com/tkemps/diagrams-gi-gtk.git

flag buildExamples
    description: Build example executables
    default: False

library
  exposed-modules:     Diagrams.Backend.GIGtk
  build-depends:       base >= 4.2 && < 4.12,
                       transformers >= 0.5 && < 0.6,
                       diagrams-lib >= 1.3 && < 1.5,
                       diagrams-cairo >= 1.3 && < 1.5,
                       cairo >= 0.13 && < 0.14,
                       gi-gdk >= 3.0 && < 3.1,
                       gi-gtk >= 3.0 && < 3.1,
                       gi-cairo >= 1.0 && < 1.1
  hs-source-dirs:      src
  default-language:    Haskell2010

executable ex1
  if flag(buildExamples)
    build-depends:     base >= 4.2 && < 4.12,
                       text >= 1.2 && <= 1.3,
                       diagrams >= 1.4 && < 1.5,
                       diagrams-lib >= 1.4 && < 1.5,
                       diagrams-cairo >= 1.3 && < 1.5,
                       diagrams-gi-gtk,
                       gi-gtk >= 3.0 && < 3.1,
                       gi-gdk >= 3.0 && < 3.1,
                       haskell-gi >= 0.21,
                       colour >= 2.3 && < 2.4,
                       haskell-gi-base >= 0.21,
                       gi-glib >= 2.0,
                       vector-space >= 0.16 && < 0.17
  else
    buildable: False
  hs-source-dirs:      examples
  main-is:             diagrams-gi-gtk-example1.hs
  default-language:    Haskell2010

