cabal-version:       3.0
name:                diagrams-gi-gtk
version:             0.2
synopsis:            Backend for rendering diagrams directly to GTK windows based on gi-gtk package
description:         An optional add-on to the diagrams-cairo package
                     which allows rendering diagrams directly to GTK DrawingArea widgets
                     provided by the gi-gtk package.
homepage:            http://projects.haskell.org/diagrams/
license:             MIT
license-file:        LICENSE
author:              Torsten Kemps-Benedix
maintainer:          tkx68@icloud.com
copyright:           2019 Torsten Kemps-Benedix
category:            Graphics
build-type:          Simple
tested-with:         GHC == 9.2.2
extra-source-files:  README.markdown

source-repository head
  type:     git
  location: http://github.com/tkemps/diagrams-gi-gtk.git

flag buildExamples
    description: Build example executables
    default: False

library
  exposed-modules:     Diagrams.Backend.GIGtk
  build-depends:       base >= 4.13,
                       transformers >= 0.5,
                       diagrams-lib >= 1.4,
                       diagrams-cairo >= 1.4,
                       cairo >= 0.13,
                       gi-gdk >= 4,
                       gi-gtk >= 4,
                       gi-cairo >= 1.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable ex1
  if flag(buildExamples)
    build-depends:     base >= 4.13,
                       text >= 1.2,
                       transformers >= 0.5,
                       diagrams >= 1.4,
                       diagrams-lib >= 1.4,
                       diagrams-cairo >= 1.4,
                       diagrams-gi-gtk,
                       gi-gtk >= 4,
                       gi-gdk >= 4,
                       haskell-gi >= 0.25,
                       colour >= 2.3,
                       haskell-gi-base >= 0.25,
                       gi-glib >= 2.0,
                       vector-space >= 0.16,
                       gi-cairo >= 1.0
  else
    buildable: False
  hs-source-dirs:      examples
  main-is:             diagrams-gi-gtk-example1.hs
  default-language:    Haskell2010

